--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mitchell Enterprise Group LLC | IT Consulting</title>
+    <title>Mitchell Enterprise Group LLC | IT Consulting & Government Contracting</title>
     <meta name="description"
-        content="Premier IT Consulting services for modern businesses. Cybersecurity, Cloud Solutions, and Digital Transformation.">
+        content="Premier IT Consulting services for government and enterprise. Specializing in Cybersecurity, Cloud Solutions, AI Implementation, and Digital Transformation. MBE & HUB Certified.">
+    <meta name="keywords"
+        content="IT Consulting, Government Contracting, Cybersecurity, AI Implementation, Cloud Solutions, MBE Certified, HUB Certified, Mitchell Enterprise Group">
+    <meta name="author" content="Mitchell Enterprise Group LLC">
+    <link rel="icon" type="image/png" href="favicon.png">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.mitchellenterprisegrp.com/">
+    <meta property="og:title" content="Mitchell Enterprise Group LLC | IT Consulting">
+    <meta property="og:description"
+        content="Empowering organizations with cutting-edge IT solutions. MBE & HUB Certified Government Contractor.">
+    <meta property="og:image" content="https://www.mitchellenterprisegrp.com/assets/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.mitchellenterprisegrp.com/">
+    <meta property="twitter:title" content="Mitchell Enterprise Group LLC | IT Consulting">
+    <meta property="twitter:description"
+        content="Empowering organizations with cutting-edge IT solutions. MBE & HUB Certified Government Contractor.">
+    <meta property="twitter:image" content="https://www.mitchellenterprisegrp.com/assets/og-image.jpg">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +37,11 @@
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- Three.js & GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -31,53 +56,49 @@
             <div class="mobile-toggle">
                 <i class="fas fa-bars"></i>
             </div>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#certifications">Certifications</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#contact" class="btn btn-primary">Get Started</a></li>
-                </ul>
-            </nav>
+            <div class="header-right">
+                <nav class="main-nav">
+                    <ul class="nav-links">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#certifications">Certifications</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="header-cta">
+                    <a href="#" class="btn btn-primary calendly-trigger">Get Started</a>
+                </div>
+            </div>
         </div>
     </header>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-bg"></div>
         <div class="container">
             <div class="hero-grid">
                 <div class="hero-content">
                     <h1 class="fade-in">Achieve Operational Excellence with <span class="text-gradient">M.E.G.</span>
                     </h1>
-                    <p class="fade-in">Mitchell Enterprise Group delivers tailored IT consulting, staffing solutions,
-                        and AI
-                        implementation for government agencies and enterprise clients. We help organizations achieve
-                        operational excellence and sustainable growth.</p>
+                    <h3 class="fade-in hero-tagline">
+                        <span>Eliminate Inefficiency.</span>
+                        <span>Deploy AI.</span>
+                        <span>Modernize Fast.</span>
+                    </h3>
+                    <p class="fade-in">We help agencies and enterprise teams replace slow, manual processes with
+                        AI-powered automation, optimized cloud environments, and high-impact IT consulting — so your
+                        organization runs faster, smarter, and with fewer constraints.</p>
                     <div class="hero-btns fade-in">
-                        <a href="#services" class="btn btn-primary">Our Services</a>
-                        <a href="#contact" class="btn btn-outline">Get Started</a>
+                        <a href="#" class="btn btn-primary responsive-cta calendly-trigger"
+                            data-full-text="Get a Free Efficiency & Automation Consultation"
+                            data-short-text="Book Free Consultation">
+                            <span class="cta-text">Get a Free Efficiency & Automation Consultation</span>
+                            <i class="fas fa-arrow-right" style="margin-left: 0.5rem;"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="hero-visual fade-in">
-                    <div class="tech-viz-container">
-                        <div class="hex-grid">
-                            <div class="hex"></div>
-                            <div class="hex"></div>
-                            <div class="hex"></div>
-                            <div class="hex"></div>
-                            <div class="hex"></div>
-                            <div class="hex"></div>
-                            <div class="hex"></div>
-                        </div>
-                        <div class="tech-circle"></div>
-                        <div class="tech-circle-inner"></div>
-                        <div class="particles">
-                            <span></span><span></span><span></span><span></span><span></span>
-                        </div>
-                    </div>
+                    <!-- 3D Canvas moved to body for fixed positioning -->
                 </div>
             </div>
         </div>
@@ -155,57 +176,8 @@
         </div>
     </section>
 
-    <!-- Certifications Section -->
-    <section id="certifications" class="section-padding" style="background: var(--bg-body);">
-        <div class="container">
-            <div class="text-center">
-                <h2>Certifications & Credentials</h2>
-                <p>Trusted by government agencies and enterprise clients nationwide</p>
-            </div>
-
-            <div class="certifications-grid">
-                <div class="cert-badge">
-                    <div class="cert-icon">
-                        <i class="fas fa-certificate"></i>
-                    </div>
-                    <h4>MBE Certified</h4>
-                    <p>Minority Business Enterprise</p>
-                </div>
-
-                <div class="cert-badge">
-                    <div class="cert-icon">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                    <h4>HUB Verified</h4>
-                    <p>Historically Underutilized Business</p>
-                </div>
-
-                <div class="cert-badge">
-                    <div class="cert-icon">
-                        <i class="fas fa-globe"></i>
-                    </div>
-                    <h4>SAM.gov Registered</h4>
-                    <p>Active Government Supplier</p>
-                </div>
-
-                <div class="cert-badge">
-                    <div class="cert-icon">
-                        <i class="fas fa-building"></i>
-                    </div>
-                    <h4>Small Business</h4>
-                    <p>CAGE: 9YPS7 | DUNS: 132138935</p>
-                </div>
-            </div>
-
-            <div class="text-center" style="margin-top: 2rem;">
-                <p style="color: var(--text-muted); font-size: 0.9rem;">Eligible for set-aside and goal-based government
-                    contracting</p>
-            </div>
-        </div>
-    </section>
-
     <!-- Why Choose M.E.G. Section -->
-    <section id="why-meg" class="section-padding" style="background: var(--bg-card);">
+    <section id="why-meg" class="section-padding">
         <div class="container">
             <div class="text-center">
                 <h2>Why Choose M.E.G.</h2>
@@ -252,8 +224,60 @@
         </div>
     </section>
 
+    <!-- Certifications Section -->
+    <section id="certifications" class="section-padding">
+        <div class="container">
+            <div class="text-center">
+                <h2>Certifications & Credentials</h2>
+                <p>Trusted by government agencies and enterprise clients nationwide</p>
+            </div>
+
+            <div class="certifications-grid">
+                <div class="cert-badge">
+                    <div class="cert-icon">
+                        <img src="mbe.png" alt="MBE Certified" loading="lazy"
+                            style="height: 4rem; width: auto; object-fit: contain; display: block; margin: 0 auto;">
+                    </div>
+                    <h4>MBE Certified</h4>
+                    <p>Minority Business Enterprise</p>
+                </div>
+
+                <div class="cert-badge">
+                    <div class="cert-icon">
+                        <img src="hub-certified-2022.png" alt="HUB Certified" loading="lazy"
+                            style="height: 4rem; width: auto; object-fit: contain; display: block; margin: 0 auto;">
+                    </div>
+                    <h4>HUB Verified</h4>
+                    <p>Historically Underutilized Business</p>
+                </div>
+
+                <div class="cert-badge">
+                    <div class="cert-icon">
+                        <img src="sam-gov-logo.png" alt="SAM.gov Registered" loading="lazy"
+                            style="height: 4rem; width: auto; object-fit: contain; display: block; margin: 0 auto;">
+                    </div>
+                    <h4>SAM.gov Registered</h4>
+                    <p>Active Government Supplier</p>
+                </div>
+
+                <div class="cert-badge">
+                    <div class="cert-icon">
+                        <i class="fas fa-building"></i>
+                    </div>
+                    <h4>Small Business</h4>
+                    <p>CAGE: 9YPS7 | DUNS: 132138935</p>
+                </div>
+            </div>
+
+            <div class="text-center" style="margin-top: 2rem;">
+                <p style="color: var(--text-muted); font-size: 0.9rem;">Eligible for set-aside and goal-based government
+                    contracting</p>
+            </div>
+        </div>
+    </section>
+
     <!-- About Section -->
-    <section id="about" class="section-padding" style="background: var(--bg-body);">
+    <section id="about" class="section-padding">
         <div class="container">
             <div class="text-center">
                 <h2>About Mitchell Enterprise Group</h2>
@@ -280,25 +304,58 @@
                     here to help.</p>
             </div>
 
-            <div class="contact-form">
-                <form id="contact-form" action="https://formspree.io/f/xdkobkwg" method="POST">
-                    <div class="form-group">
-                        <label for="name">Full Name</label>
-                        <input type="text" id="name" name="name" class="form-control" placeholder="John Doe" required>
+            <div class="contact-grid">
+                <!-- Left Column: Schedule Consultation -->
+                <div class="contact-schedule">
+                    <h3>Schedule a Consultation</h3>
+                    <p>Not sure where to start? A free consultation gives you the space to discuss your goals, ask
+                        questions,
+                        and see how our services can support your business. We’ll walk you through smart, actionable
+                        options tailored to your needs—no obligation, just helpful insights.</p>
+
+                    <div class="schedule-benefits">
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i> <span>Expert Analysis</span>
+                        </div>
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i> <span>Tailored Roadmap</span>
+                        </div>
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i> <span>No Obligation</span>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email Address</label>
-                        <input type="email" id="email" name="email" class="form-control" placeholder="john@company.com"
-                            required>
+
+                    <a href="#" class="btn btn-primary calendly-trigger">
+                        <i class="far fa-calendar-alt"></i> Book Free Consultation
+                    </a>
+                </div>
+
+                <!-- Right Column: Contact Form -->
+                <div class="contact-form-wrapper">
+                    <div class="form-header">
+                        <h3>Send a Message</h3>
+                        <p>General inquiries & RFPs</p>
                     </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" class="form-control" rows="5"
-                            placeholder="How can we help you?" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Send Message</button>
-                    <div id="form-status" style="margin-top: 1rem; text-align: center; display: none;"></div>
-                </form>
+                    <form id="contact-form" action="https://formspree.io/f/manknjya" method="POST">
+                        <div class="form-group">
+                            <label for="name">Full Name</label>
+                            <input type="text" id="name" name="name" class="form-control" placeholder="John Doe"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="email" id="email" name="email" class="form-control"
+                                placeholder="john@company.com" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" class="form-control" rows="5"
+                                placeholder="How can we help you?" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-outline" style="width: 100%;">Send Message</button>
+                        <div id="form-status" style="margin-top: 1rem; text-align: center; display: none;"></div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
@@ -325,7 +382,7 @@
                 </div>
                 <div>
                     <h4>Contact</h4>
-                    <ul <ul
+                    <ul
                         style="margin-top: 1rem; display: flex; flex-direction: column; gap: 0.5rem; color: var(--text-muted);">
                         <li><i class="fas fa-envelope" style="margin-right: 0.5rem;"></i>
                             contact@mitchellenterprisegrp.com</li>
@@ -340,6 +397,10 @@
         </div>
     </footer>
 
+    <!-- Canvas Container for 3D Background -->
+    <div id="canvas-container"></div>
+
+    <script src="js/living-mesh.js"></script>
     <script src="js/main.js"></script>
 </body>
 
