Fix deployment: Add .nojekyll and update asset paths

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -400,8 +400,9 @@
     <!-- Canvas Container for 3D Background -->
     <div id="canvas-container"></div>
 
-    <script src="js/living-mesh.js"></script>
-    <script src="js/main.js"></script>
+    <!-- Scripts -->
+    <script src="./js/living-mesh.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
