--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
     <div id="canvas-container"></div>
 
     <!-- Scripts -->
+    <!-- Force deployment update -->
     <script src="./js/living-mesh.js"></script>
     <script src="./js/main.js"></script>
 </body>
