--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="certifications-grid">
                 <div class="cert-badge">
                     <div class="cert-icon">
-                        <img src="mbe.png" alt="MBE Certified" loading="lazy"
+                        <img src="https://www.mitchellenterprisegrp.com/mbe.png" alt="MBE Certified" loading="lazy"
                             style="height: 4rem; width: auto; object-fit: contain; display: block; margin: 0 auto;">
                     </div>
                     <h4>MBE Certified</h4>
@@ -244,7 +244,8 @@
 
                 <div class="cert-badge">
                     <div class="cert-icon">
-                        <img src="hub-certified-2022.png" alt="HUB Certified" loading="lazy"
+                        <img src="https://www.mitchellenterprisegrp.com/hub-certified-2022.svg" alt="HUB Certified"
+                            loading="lazy"
                             style="height: 4rem; width: auto; object-fit: contain; display: block; margin: 0 auto;">
                     </div>
                     <h4>HUB Verified</h4>
@@ -253,7 +254,8 @@
 
                 <div class="cert-badge">
                     <div class="cert-icon">
-                        <img src="sam-gov-logo.png" alt="SAM.gov Registered" loading="lazy"
+                        <img src="https://www.mitchellenterprisegrp.com/sam-gov-logo.png" alt="SAM.gov Registered"
+                            loading="lazy"
                             style="height: 4rem; width: auto; object-fit: contain; display: block; margin: 0 auto;">
                     </div>
                     <h4>SAM.gov Registered</h4>
